# hasher

./: .clang-format  .gitignore  .gitmodules  HASHSET_FORMAT  Jenkinsfile  Makefile.am  build.sh  configure.ac  jenkins.sh  mkhashset.py
.world/: build.sh  config.sh  install.sh
include/: convex_hull.h  cpp20.h  entropy.h  entropy_impl.h  error.h  fuzzy_hasher.h  fuzzy_impl.h  fuzzy_matcher.h  hash_types.h  hasher.h  hasher_impl.h  hashset.h  hashset_util.h  hashsetdata.h  hashsetholder.h  hashsetinfo.h  hex.h  hset.h  hset_decoder.h  hset_encoder.h  libblake3_hasher.h  libcrypto_hasher.h  lookupstrategy.h  matcher.h  pair_out.h  parser.h  quick_hasher.h  rwutil.h  sizeset.h  throw.h  tuple_out.h  util.h
include/hasher/: api.h  common.h  fuzzy.h  hasher.h  hashset.h  hex.h
include/hashset/: arrow_proxy.h  basic_ls.h  block_hsd.h  block_linear_ls.h  block_ls.h  convex_hull.h  field_iterator.h  field_range.h  hset.h  hset_decoder.h  hset_decoder_chunks.h  hset_encoder.h  hset_encoder_chunks.h  hset_ops.h  hset_structs.h  line_iterator.h  line_range.h  lookupstrategy.h  radius_hsd.h  radius_ls.h  range_hsd.h  range_ls.h  record_iterator.h  util.h
include/hsd_impls/: basic_hsd.h  block_hsd.h  convex_hull.h  hsd_utils.h  radius_hsd.h  range_hsd.h
include/util/: istream_line_iterator.h  istream_line_range.h
m4/: ax_gcc_func_attribute.m4
python/: hasher.py  pyproject.toml  setup.py  test.py  test.sh
python/hasher/: __init__.py  util.py
python/tests/: test_hasher.py
src/: convex_hull.cpp  entropy.cpp  entropy_main.cpp  error.cpp  fuzzy.cpp  fuzzy_hasher.cpp  fuzzy_main.cpp  fuzzy_matcher.cpp  hasher.cpp  hasher.pc.in  hasher_main.cpp  hashset.cpp  hashsetdata.cpp  hashsetholder.cpp  hashsetinfo.cpp  hex.cpp  hex_avx2.cpp  hex_sse41.cpp  libblake3_hasher.cpp  libcrypto_hasher.cpp  main.cpp  matcher.cpp  matcher_main.cpp  parser.cpp  quick_hasher.cpp  sizeset.cpp  util.cpp
src/fuzzy/: fuzzy_main.cpp
src/hasher/: hasher_main.cpp
src/hsd_impls/: convex_hull.cpp
src/lib/: error.cpp  fuzzy_matcher.cpp  hash_types.cpp  hasher.cpp  hasher.pc.in  hashset.cpp  hashsetdata.cpp  hashsetinfo.cpp  hex.cpp  hset.cpp  hset_decoder.cpp  libcrypto_hasher.cpp  parser.cpp  rwutil.cpp  util.cpp
src/lib/hasher/: entropy.cpp  hasher.cpp  libcrypto_hasher.cpp
src/lib/hashset/: convex_hull.cpp  hsd_utils.cpp  hset.cpp  hset_decoder.cpp  hset_decoder_chunks.cpp  hset_encoder.cpp  hset_encoder_chunks.cpp  hset_ops.cpp  hset_structs.cpp  lookupstrategy.cpp  record_iterator.cpp  util.cpp  utils.cpp
src/lib/hex_impls/: hex_avx2.cpp
src/mkhashset/: mkhashset_main.cpp
test/: 0123456789_a.hset  0123456789_b.hset  bench_hashset.cpp  bench_hex.cpp  bench_hsd_lookup.cpp  good.hset  helper.cpp  helper.h  md5_sha1_a  md5_sha1_b  sha1  sha1.hset  test.cpp  test1.hset  test_common_api.cpp  test_convex_hull.cpp  test_entropy.cpp  test_fuzzy_matcher.cpp  test_hasher.cpp  test_hashset.cpp  test_hashset_api.cpp  test_hashset_setops.cpp  test_hashsetdata.cpp  test_hashsetdata_util.cpp  test_hex.cpp  test_hset_decoder.cpp  test_hset_decoder_chunks.cpp  test_hset_encoder.cpp  test_hset_encoder_chunks.cpp  test_hset_ops.cpp  test_hset_round_trip.cpp  test_matcher.cpp  test_parser.cpp  test_record_iterator.cpp  test_util.cpp
utils/: NSRL_HOWTO  VIRUSSHARE_HOWTO  hsdump.py  hsinfo.py  mkhashset.py  mkhashset_2.py  nsrldump.py
